# Cpp20-FileCompare

./: .gitignore  CMakeLists.txt  Readme.md  br  compare_performance.sh  generate_test_files.py  main.cpp
fast_file_compare/src/: main.rs
rust_compare/: Cargo.toml
rust_compare/src/: main.rs
